# hello-prisma/src/routes/auth.routes.ts
@@ -8,6 +8,8 @@ import { AuthController } from "../controllers/auth.controller.js";
 import { ConfiguracaoService } from "../services/configuracao.service.js";
 import { prisma } from "../lib/prisma.js";
 import { horarioMiddleware } from "../middlewares/horario.middleware.js";
+import { authMiddleware } from "../middlewares/auth.middleware.js";
+import { roleMiddleware } from "../middlewares/role.middleware.js";
 
 const router = Router();
 const configuracaoService = new ConfiguracaoService(prisma);
@@ -18,13 +20,15 @@ router.post(
     try {
       const config = await configuracaoService.get();
       await horarioMiddleware(req, res, next, config);
-    } catch (error) {
-      next(error);
+    } catch {
+      next();
     }
   },
   AuthController.login,
 );
 
+router.use(authMiddleware);
+router.use(roleMiddleware("ADMIN"));
 router.post("/reset-password", AuthController.resetPassword);
 
 export default router;
